<resources>
    <string name="app_name">IMS Palet</string>
    <string name="delete_button_description">Eliminar</string>
    <string name="codigo_hint">Código aquí</string>
    <string name="embalador_hint">Emablador</string>
    <string name="palet_hint">Palet aquí</string>
    <string name="save_button_description">Guardar</string>
    <string name="cajas_hint">N° de cajas aquí</string>
    <string name="add_button_description">Agregar</string>
    <string name="pending_button_description">Descripción del botón para dejar pendiente</string>


</resources>